@@ -1,5 +1,4 @@
 class WelcomeController < ApplicationController
-
   before_filter :get_filtered_tweets, :only => :index
 
   def index
@@ -7,10 +6,10 @@ class WelcomeController < ApplicationController
     @lists_tweets = {}
     @lists_users = {}
     @lists.each do |list|
-      @lists_users[list.name] = list.users.find :all, :limit => G140[:users_per_list], :order => "id DESC"
+      @lists_users[list.name] = list.users.find :all, :limit => G140[:users_per_list], :conditions => "status = 1", :order => "id DESC"
       @lists_tweets[list.name] = Tweet.find :all, :limit => G140[:tweets_per_list], :order => "tweet_id DESC", 
-        :conditions => ["user_id IN (SELECT `users`.id FROM `users` 
-          INNER JOIN `subscriptions` ON `users`.id = `subscriptions`.user_id 
+        :conditions => ["user_id IN (SELECT `users`.id FROM `users`
+          INNER JOIN `subscriptions` ON `users`.id = `subscriptions`.user_id AND users.status = 1
           WHERE ((`subscriptions`.list_id = ?)))", list.id],
         :include => :user
     end
@@ -24,10 +23,7 @@ class WelcomeController < ApplicationController
   end
 
   private
-
   def get_filtered_tweets
     @filtered_tweets = Tweet.find(:all, :conditions => ["text like ?", "%#fail%"], :order => 'tweet_id DESC')
   end
-
-
 end
